kubernetes/applications/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    name: media
    pod-security.kubernetes.io/enforce: baseline
